<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_screenshots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/saved_layouts"
        android:drawableTop="@drawable/ic_home"
        android:background="@drawable/nav_button_selector"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="8dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:backgroundTint="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_catalogue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/furniture_catalogue"
        android:drawableTop="@drawable/ic_catalogue"
        android:background="@drawable/nav_button_selector"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="8dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:backgroundTint="@null"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_measure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/measure_tool"
        android:drawableTop="@drawable/ic_measure"
        android:background="@drawable/nav_button_selector"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="8dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:backgroundTint="@null"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/log_out"
        android:drawableTop="@drawable/ic_logout"
        android:background="@drawable/nav_button_selector"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="8dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:backgroundTint="@null"/>
</LinearLayout>