<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_color">Select Color</string>
    <string name="select_type">Select Type</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="app_name" translatable="false">ArrangeIt</string>
    <string name="too_dark_to_detect_surfaces_please_move_to_a_well_lit_area">Too dark to detect surfaces\nPlease move to a well-lit area</string>
    <string name="clear_measurement">Clear Measurement</string>
    <string name="complete_measurement">Complete Measurement</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_enter_your_details_to_sign_in">Please enter your details to sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="saved_layouts">Saved Layouts</string>
    <string name="furniture_catalogue">Furniture Catalogue</string>
    <string name="measure_tool">Measure Tool</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="place_in_ar">Place in AR</string>
    <string name="dimensions">Dimensions</string>
    <string name="furniture_description">Furniture Description</string>
    <string name="description">Description</string>
    <string name="texture">Texture</string>
    <string name="colours">Colours</string>
    <string name="furniture_name">Furniture Name</string>

</resources>
